@@ -1,4 +1,12 @@
-v2015-07-07
+v2015-09-18
+  * zsh:
+      修正了android_env 在Ubuntu 环境上失败的错误
+      现在~/.zsh/path 中显式使用PATH 变量了
+      增加了cpan 的用户路径
+  * vim:
+      增加了几个代码高亮类插件
+      修改了YCM 的配置方式
+v2015-09-07
   * zsh:
       修改了两个挂载函数
       oh-my-zsh 现在使用一个单独的函数升级
